--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -101,6 +101,12 @@ body{
             @media only screen and (min-width:$bp-small-3){
                 font-size: 3rem;       
             }
+            @media (min-width:$bp-large) and (orientation: landscape){
+                font-size: 2.1rem;
+            }
+            @media (min-width:$bp-large-2){
+                font-size: 3rem;
+            }
             @media (min-width:$bp-1044p){
                 font-size: 5rem;
             }
